Use static valueOf() instead of instantiating a new object.